falla la vista de alta cliente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -328,7 +328,7 @@
 </div>
 
 <div class="content" role="main">
-
+  <app-alta-cliente></app-alta-cliente>
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
